--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -1,13 +1,33 @@
-.education-container{
+.education-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 1.5rem;
 }
-.education-card-container{
+
+.education-card-container, .expierence-card-container {
     display: flex;
     flex-direction: column;
     justify-content: baseline;
     align-items: baseline;
+}
+
+.card {
+    width: 18rem;
+    height: rem; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+}
+
+.card img {
+    height: 10rem;
+    object-fit: cover;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
