--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,20 +1,45 @@
-/* Footer.css */
-html, body {
-    height: 100%;
-    margin: 0;
-  }
-  
-  #root, .main-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  footer {
-    margin-top: auto;
-  }
-  
-  .bg-black {
-    background-color: #000;
-  }
-  
+footer {
+  background-color: #000;
+  color: #fff;
+  padding: 20px 0;
+}
+
+.nav-link {
+  text-decoration: none;
+  margin: 10px 0; /* Add some margin between links for better spacing */
+}
+
+.nav-link:hover {
+  text-decoration: none; /* Ensure no underline on hover */
+}
+
+.flex-column .motion-div {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.bg-black {
+  background-color: #000;
+}
+
+.text-white {
+  color: #fff;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* Add gap between items for vertical spacing */
+  text-decoration: none;
+}
+
+.footer-item {
+  display: flex;
+  justify-content: flex-start;
+}
