--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,12 +2,16 @@ header {
     background-color: black;
     color: white;
     padding: 1rem;
-    align-items: center; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-header {
     display: flex;
-    gap: 2rem;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 nav {
@@ -25,4 +29,34 @@ nav a {
 
 nav a:hover {
     text-decoration: underline;
+}
+
+.nav-toggle{
+    display: none;
+}
+
+@media (max-width: 768px){
+    nav{
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+    .nav-header.open nav {
+        display: flex;
+        background-color: black;
+        width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-end;
+        padding: 1rem;
+        gap: 1rem;
+    }
+    .nav-toggle{
+        display: block;
+        background: none;
+        border: none;
+        color: white;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
 }
